# dementia-detection-system

./: .gitattributes  .gitignore  README.md
nms-ai/: .gitignore  README.md  dementia_crew.py
nms-ai/articlerewrite/: intermit.sh  main.py
nms-ai/centralCode/: Dockerfile  aggregation.py  clean.py  convert_para.py  data_format.py  docker-compose.yml  model_creation.py  prompt.py  regenerate_model.py  requirements.txt  speech_ai.py  test.sh  testmodel.sh  web.py
nms-ai/dementia_research_crew/: README.md  article_1.json  article_2.json  intermit.sh  intermit.sh~  out.py  out.py~  pyproject.toml
nms-ai/dementia_research_crew/knowledge/: user_preference.txt
nms-ai/dementia_research_crew/src/dementia_research_crew/: crew.py  main.py
nms-ai/dementia_research_crew/src/dementia_research_crew/config/: agents.yaml  tasks.yaml
nms-ai/lifestyledataModel/: data_format.py
nms-ai/lifestylemodel/: data_format.py  main.py
nms-backend/: creation.sql  dementia  docker  index.js  package-lock.json  package.json  todo.md
nms-backend/dematia_app/: go.mod
nms-backend/nms-server/: go.mod
nms-mobile/: settings.gradle.kts
nms-mobile/app/: build.gradle.kts
nms-mobile/dementiaApp/: gradle.properties  settings.gradle.kts
nms-mobile/loginDemo/: settings.gradle.kts
nms-server/: .env.example  CREATE.sql  Dockerfile  docker-compose.yml  endpoint_basic_create_tests.sh  endpoint_review_ticket_test.sh  endpoint_user_tests_tests.sh  go.mod  go.sum  tests
nms-server/caddy/: Caddyfile
nms-server/frontend/: index.html
nms-web/: package-lock.json  package.json
(+295 files in other folders)
