[project]
name = "dementia_research_crew"
version = "0.1.0"
description = "dementia_research_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.201.1,<1.0.0",
    "pyparseit>=0.2.0",
]

[project.scripts]
dementia_research_crew = "dementia_research_crew.main:run"
run_crew = "dementia_research_crew.main:run"
train = "dementia_research_crew.main:train"
replay = "dementia_research_crew.main:replay"
test = "dementia_research_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
